# CS171_final_project

./: CMakeLists.txt  LICENSE  README.md
3Dshaders/: basic3D.vs  common.glsl  final-3d-display.fs  radiance-field-3d-fragment-shader.glsl
include/: camera.h  defines.h  object.h  shader.h  utils.h
report/: report.tex
shaders/: basic.fs  basic.vs  cascades.glsl  common.glsl  compute-cascade-fragment-shader.glsl  final-compose-fragment-shader.glsl  merge-cascades-fragment-shader.glsl  radiance-field-fragment-shader.glsl  scene-accumulation-fragment-shader.glsl  scene-fragment-shader.glsl  sdf_texture.fs
src/: main.cpp  main_2d.cpp  main_3d.cpp  object.cpp  shader.cpp  utils.cpp
